# 1brcingo

./: BUILD  README.md  WORKSPACE  bazel-billion_rows  bazel-bin  bazel-out  bazel-testlogs  go.mod  go.sum  main.go  weather_stations.csv
pkg/: BUILD.bazel  datastructs.go  iommap.go  processing.go
