load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pkg",
    srcs = [
        "datastructs.go",
        "iommap.go",
        "processing.go",
    ],
    importpath = "github.com/tylergan/billion_rows/pkg",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_edsrzf_mmap_go//:mmap-go",
        "@com_github_pkg_errors//:errors",
    ],
)
